--- a/main.css
+++ b/main.css
@@ -19,6 +19,41 @@ a:hover, a:active {
 h1, h2, h3, h4, h5, h6 {
   font-family: 'Merriweather', serif;
   margin: 5px;
+  color: #484848;
+}
+
+.btn {
+  display: inline-block;
+  font-weight: 400;
+  text-align: center;
+  width: 100%;
+  white-space: nowrap;
+  border: 1px solid transparent;
+  padding: .7rem 1rem;
+  font-size: 1rem;
+  line-height: 1.5;
+  border-radius: .25rem;
+  background: #008489;
+  color: #fff;
+}
+
+.btn:hover {
+  cursor: pointer;
+  background: #00767a;
+}
+
+.text-input {
+  border: none;
+  outline: none;
+  display: block;
+  width: 100%;
+  box-sizing: border-box;
+  margin-bottom: 10px;
+  padding: .5rem 1rem;
+  font-size: 1.25rem;
+  line-height: 1.5;
+  border-radius: .3rem;
+  font-family: 'Lora', serif;
 }
 
 /* NAVBAR */
@@ -83,13 +118,18 @@ header nav ul a {
   padding: 5px;
 }
 
+.page-wrapper .posts-slider .slider-title {
+  text-align: center;
+  margin: 40px auto 40px;
+}
+
 .page-wrapper .posts-slider .next {
   position: absolute;
   right: 30px;
   top: 50%;
   z-index: 100;
   font-size: 2em;
-  color: #444;
+  color: #008489;
   cursor: pointer;
 }
 
@@ -99,7 +139,7 @@ header nav ul a {
   top: 50%;
   z-index: 100;
   font-size: 2em;
-  color: #444;
+  color: #008489;
   cursor: pointer;
 }
 
@@ -219,7 +259,8 @@ header nav ul a {
 }
 
 .content .sidebar .popular-posts .post {
-  height: 80px;
+  height: 90px;
+  border: 1px solid gray;
 }
 
 .content .sidebar .popular-posts .divide {
@@ -248,8 +289,54 @@ header nav ul a {
 }
 
 .footer {
-  height: 50px;
   margin-top: -50px;
+  background: #181818;
+  color: white;
+  height: 301px;
+  position: relative;
+}
+
+.footer .footer-bottom {
+  color: #686868;
+  border-top: 1px solid #333333;
+  text-align: center;
+  position: absolute;
+  bottom: 0px;
+  width: 100%;
+  height: 50px;
+  box-sizing: border-box;
+}
+
+.footer .footer-content {
+  height: 200px;
+  display: flex;
+}
+
+.footer .footer-content .footer-section {
+  flex: 1;
+  height: 99%;
+  padding: 20px;
+  box-sizing: border-box;
+}
+
+.footer .footer-content .other-links ul li {
+  font-size: 1.1em;
+}
+
+.footer .footer-content .social-links .links {
+  display: flex;
+  justify-content: space-around;
+  width: 80%;
+  margin-top: 30px;
+}
+
+.footer .footer-content .social-links .links i {
+  font-size: 2em;
+  margin: 0px 10px;
+}
+
+.footer .footer-content .footer-section h2 {
+  color: #f0ecec;
 }
 
 @media (max-width: 768px) {
