--- a/main.css
+++ b/main.css
@@ -174,12 +174,12 @@ header nav ul a {
 
 .content {
   width: 90%;
-  margin: 40px auto;
+  margin: 40px auto 140px;
 }
 
 .content .post-listing {
-  width: 70%;
-  float: left;
+  width: 75%;
+  margin: 0px auto;
 }
 
 .content .post-listing .post {
@@ -201,6 +201,10 @@ header nav ul a {
 
 .content .post-listing .post .post-title {
   margin: 5px 0px;
+}
+
+.content .post-listing .recent-posts-title {
+  margin: 20px;
 }
 
 .content .post-listing .post .read-more {
@@ -236,56 +240,6 @@ header nav ul a {
 .content .post-listing .post .post-info {
   color: #757575;
   font-size: 0.8em;
-}
-
-.content .sidebar {
-  width: 29%;
-  float: left;
-}
-
-.content .sidebar .fb-page {
-  background: #fff;
-  height: 200px;
-  width: 98%;
-  margin: 0px auto;
-}
-
-.content .sidebar .popular-posts {
-  background: #fff;
-  width: 98%;
-  margin: 25px auto;
-  padding: 10px;
-  box-sizing: border-box;
-}
-
-.content .sidebar .popular-posts .post {
-  height: 90px;
-  border: 1px solid gray;
-}
-
-.content .sidebar .popular-posts .divide {
-  border-bottom: 1px solid #EBEBEB;
-  margin: 7px auto;
-}
-
-.content .sidebar .popular-posts .post .post-image {
-  width: 24%;
-  height: 80px;
-  float: left;
-}
-
-.content .sidebar .popular-posts .post .post-info {
-  width: 74%;
-  float: left;
-  height: 100%;
-  padding: 5px;
-  box-sizing: border-box;
-}
-
-.content .sidebar .popular-posts .post .post-title {
-  font-weight: lighter;
-  color: #008489;
-  margin: 5px;
 }
 
 .footer {
