--- a/main.css
+++ b/main.css
@@ -192,10 +192,19 @@ header nav ul a {
   float: left;
 }
 
+.content .page-content.single {
+  margin-right: 10px;
+  background: white;
+  padding: 20px 50px;
+  box-sizing: border-box;
+  font-size: 1.1em;
+  border-radius: 5px;
+}
+
 .content .sidebar {
   width: 28%;
   float: left;
-  margin: 78px auto;
+  margin: 0px auto;
 }
 
 .content .sidebar .search-div {
@@ -204,29 +213,46 @@ header nav ul a {
   border-radius: 5px;
 }
 
-.content .sidebar .topics {
+.content .sidebar .section {
   background: #ffffff;
   margin-top: 20px;
   border-radius: 5px;
   padding: 20px;
 }
 
-.content .sidebar .topics ul {
+.content .sidebar .section.topics ul {
   list-style-type: none;
   padding: 0px;
   border-bottom: 1px solid #e0e0e0;
 }
 
-.content .sidebar .topics ul a {
+.content .sidebar .section.topics ul a {
   display: block;
   padding: 15px;
   border-top: 1px solid #e0e0e0;
   transition: all .3s;
 }
 
-.content .sidebar .topics ul a:hover {
+.content .sidebar .section.topics ul a:hover {
   padding-left: 25px;
   transition: all .3s;
+}
+
+.content .sidebar .section.popular .post {
+  border-top: 1px solid #e0e0e0;
+  padding-top: 10px;
+  margin-top: 10px;
+}
+
+.content .sidebar .section.popular .post .title {
+  width: 80%;
+}
+
+.content .sidebar .section.popular .post img {
+  width: 60px;
+  height: 60px;
+  float: left;
+  margin-right: 10px;
 }
 
 .content .page-content .post {
@@ -439,14 +465,17 @@ header nav ul a {
 }
 
 @media only screen and (max-width: 974px) {
+
   /* CONTENT */
   .content {
     width: 100%;
   }
+
   /* FOOTER */
   .footer .footer-content .footer-section {
     padding: 20px;
   }
+
   .footer .footer-content .about .contact {
     margin-top: 18px;
   }
@@ -456,31 +485,37 @@ header nav ul a {
   .content {
     margin: 40px auto 50px;
   }
-  .content .post-listing {
+
+  .content .page-content {
     width: 100%;
   }
+
   .content .sidebar {
     width: 100%;
     margin-top: 40px;
     padding: 10px;
     box-sizing: border-box;
   }
+
   /* FOOTER */
   .footer {
     height: auto;
     padding: 50px;
   }
+
   .footer .footer-content {
     height: auto;
     display: flex;
     flex-direction: column;
   }
+
   .footer .footer-section {
     height: auto;
     display: block;
     padding: 100px auto;
     border-bottom: 1px solid rgb(34, 33, 33);
   }
+
   .footer .footer-section .send-msg-btn {
     width: 100%;
     padding: 8px auto;
@@ -492,29 +527,36 @@ header nav ul a {
     padding: 20px;
     padding-bottom: 60px;
   }
+
   .footer .footer-section {
     padding: 0px;
   }
-  .content .post-listing .post {
+
+  .content .page-content .post {
     height: auto;
   }
-  .content .post-listing .post .post-content {
+
+  .content .page-content .post .post-content {
     width: 100%;
     padding: 5px 15px;
   }
-  .content .post-listing .post .post-image {
+
+  .content .page-content .post .post-image {
     width: 100%;
   }
-  .content .post-listing .post .read-more {
+
+  .content .page-content .post .read-more {
     position: static;
     display: block;
     width: 100%;
     box-sizing: border-box;
     margin: 10px auto;
   }
+
   .page-wrapper .posts-slider .next {
     right: 10px;
   }
+
   .page-wrapper .posts-slider .prev {
     left: 10px;
   }
