Make dropdown menu responsive

--- a/main.css
+++ b/main.css
@@ -1,7 +1,5 @@
 @import url('https://fonts.googleapis.com/css?family=Lora|Merriweather');
-
-html,
-body {
+html, body {
   padding: 0px;
   margin: 0px;
   font-family: 'Lora', serif;
@@ -14,17 +12,11 @@ a {
   color: inherit;
 }
 
-a:hover,
-a:active {
+a:hover, a:active {
   color: #008489;
 }
 
-h1,
-h2,
-h3,
-h4,
-h5,
-h6 {
+h1, h2, h3, h4, h5, h6 {
   font-family: 'Merriweather', serif;
   margin: 5px;
   color: #484848;
@@ -71,6 +63,7 @@ h6 {
 }
 
 /* NAVBAR */
+
 header {
   background: #008489;
   color: #ffffff;
@@ -477,45 +470,58 @@ header nav ul .userinfo i.fa-chevron-down {
     font-size: 30px;
     color: #ffffff;
   }
-
   .menu-toggle:before {
     content: '\f0c9';
     font-family: fontAwesome;
     line-height: 40px;
   }
-
   nav {
     width: 100%;
     background: #0E94A0;
   }
-
   nav ul {
     max-height: 0px;
+    overflow: hidden;
   }
-
   .showing {
-    max-height: 90em;
+    max-height: 95em;
   }
-
   nav ul li {
     box-sizing: border-box;
     width: 100%;
+  }
+  header nav ul li ul {
+    position: static;
+    box-sizing: border-box;
+  }
+  header nav ul li .dropdown {
+    display: block;
+    width: 100%;
+  }
+  header nav ul li .dropdown li {
+    clear: both;
+    width: 100%;
+  }
+  header nav ul li .dropdown li a {
+    background: #0E94A0;
+    color: white;
     padding: 15px;
+    padding-left: 50px;
+  }
+  header nav ul li .dropdown li a:hover {
+    background: #0E94A0;
   }
 }
 
 @media only screen and (max-width: 974px) {
-
   /* CONTENT */
   .content {
     width: 100%;
   }
-
   /* FOOTER */
   .footer .footer-content .footer-section {
     padding: 20px;
   }
-
   .footer .footer-content .about .contact {
     margin-top: 18px;
   }
@@ -525,37 +531,31 @@ header nav ul .userinfo i.fa-chevron-down {
   .content {
     margin: 40px auto 50px;
   }
-
   .content .page-content {
     width: 100%;
   }
-
   .content .sidebar {
     width: 100%;
     margin-top: 40px;
     padding: 10px;
     box-sizing: border-box;
   }
-
   /* FOOTER */
   .footer {
     height: auto;
     padding: 50px;
   }
-
   .footer .footer-content {
     height: auto;
     display: flex;
     flex-direction: column;
   }
-
   .footer .footer-section {
     height: auto;
     display: block;
     padding: 100px auto;
     border-bottom: 1px solid rgb(34, 33, 33);
   }
-
   .footer .footer-section .send-msg-btn {
     width: 100%;
     padding: 8px auto;
@@ -567,24 +567,19 @@ header nav ul .userinfo i.fa-chevron-down {
     padding: 20px;
     padding-bottom: 60px;
   }
-
   .footer .footer-section {
     padding: 0px;
   }
-
   .content .page-content .post {
     height: auto;
   }
-
   .content .page-content .post .post-content {
     width: 100%;
     padding: 5px 15px;
   }
-
   .content .page-content .post .post-image {
     width: 100%;
   }
-
   .content .page-content .post .read-more {
     position: static;
     display: block;
@@ -592,11 +587,9 @@ header nav ul .userinfo i.fa-chevron-down {
     box-sizing: border-box;
     margin: 10px auto;
   }
-
   .page-wrapper .posts-slider .next {
     right: 10px;
   }
-
   .page-wrapper .posts-slider .prev {
     left: 10px;
   }
