--- a/style.css
+++ b/style.css
@@ -19,6 +19,7 @@ a:active {
   color: #008489;
 }
 
+
 h1,
 h2,
 h3,
@@ -70,6 +71,12 @@ h6 {
   border-radius: .25rem;
   background: #008489;
   color: #fff;
+}
+
+.btn-sm {
+  padding: .5rem .8rem;
+  line-height: 1.3;
+  border-radius: .25rem;
 }
 
 .btn:hover {
