--- a/admin.css
+++ b/admin.css
@@ -36,7 +36,8 @@ header {
   height: 100%;
   float: left;
   box-sizing: border-box;
-  padding: 40px 100px;
+  padding: 40px 100px 100px;
+  overflow: scroll;
   background: #fff;
 }
 
@@ -49,16 +50,26 @@ header {
   width: unset;
 }
 
+table {
+  width: 100%;
+  border-collapse: collapse;
+  font-size: 1.1em;
+}
+
+th, td {
+  padding: 15px;
+  text-align: left;
+  border-bottom: 1px solid #d3d3d3;
+}
+
 @media (max-width: 768px) {
   nav {
     width: 100%;
     background: #054247;
   }
-
   header nav ul li .dropdown li a {
     background: #054247;
   }
-
   header nav ul li .dropdown li a:hover {
     background: #054247;
   }
