--- a/style.css
+++ b/style.css
@@ -84,6 +84,11 @@ h6 {
   background: #00767a;
 }
 
+.input-group {
+  display: block;
+  margin: 10px auto 10px;
+}
+
 .text-input {
   border: 1px solid #e0e0e0;
   outline: none;
@@ -97,6 +102,8 @@ h6 {
   border-radius: .3rem;
   font-family: 'Lora', serif;
 }
+
+
 
 /* NAVBAR */
 
