Create manage topics page
Style the action buttons on the various tables

--- a/admin.css
+++ b/admin.css
@@ -50,6 +50,10 @@ header {
   width: unset;
 }
 
+.admin-wrapper .admin-content a {
+  text-decoration: unset;
+}
+
 table {
   width: 100%;
   border-collapse: collapse;
