--- a/style.css
+++ b/style.css
@@ -1,7 +1,6 @@
-@import url('https://fonts.googleapis.com/css?family=Lora|Merriweather');
-
-html,
-body {
+@import url('https://fonts.googleapis.com/css?family=Lora');
+@import url('https://fonts.googleapis.com/css?family=Candal');
+html, body {
   padding: 0px;
   margin: 0px;
   font-family: 'Lora', serif;
@@ -14,21 +13,15 @@ a {
   color: inherit;
 }
 
-a:hover,
-a:active {
+a:hover, a:active {
   color: #008489;
 }
 
-
-h1,
-h2,
-h3,
-h4,
-h5,
-h6 {
-  font-family: 'Merriweather', serif;
+.logo-text, h1, h2, h3, h4, h5, h6 {
+  font-family: 'Candal', sans-serif;
   margin: 5px;
-  color: #484848;
+  color: #5c5b5b;
+  font-weight: normal;
 }
 
 .clearfix::after {
@@ -124,10 +117,27 @@ h6 {
 header {
   background: #008489;
   color: #ffffff;
+  height: 66px;
 }
 
 header a:hover {
   color: white;
+}
+
+.logo {
+  float: left;
+  margin-left: 2em;
+  height: inherit;
+}
+
+.logo-text {
+  padding: 0px;
+  color: white;
+  font-family: 'Candal', sans-serif;
+}
+
+.logo-text span {
+  color: #6ed6e9;
 }
 
 header nav {
@@ -138,7 +148,6 @@ header nav ul {
   margin: 0px;
   padding: 0px;
   list-style-type: none;
-  float: left;
 }
 
 header nav ul li {
@@ -148,8 +157,13 @@ header nav ul li {
 
 header nav ul li a {
   display: block;
-  color: #fff;
-  padding: 22px;
+  padding: 21px;
+  font-size: 1.1em;
+}
+
+header nav ul li a:hover {
+  background: #006669;
+  transition: 0.5s;
 }
 
 header nav ul li ul {
@@ -237,7 +251,7 @@ header nav ul .userinfo i.fa-chevron-down {
   cursor: pointer;
 }
 
-.page-wrapper .posts-slider .posts {
+.page-wrapper .posts-slider .posts-wrapper {
   height: 350px;
   width: 84%;
   margin: 0px auto;
@@ -245,14 +259,14 @@ header nav ul .userinfo i.fa-chevron-down {
   padding: 5px;
 }
 
-.page-wrapper .posts-slider .posts .post {
+.page-wrapper .posts-slider .posts-wrapper .post {
   width: 300px;
   height: 300px;
   padding: 0px 10px 0px;
   display: inline-block;
 }
 
-.page-wrapper .posts-slider .posts .post .inner-post {
+.page-wrapper .posts-slider .posts-wrapper .post .inner-post {
   height: 100%;
   border-radius: 5px;
   background: #fff;
@@ -260,7 +274,7 @@ header nav ul .userinfo i.fa-chevron-down {
   box-shadow: 0 1.2rem 1.2rem -1rem #0a0a0a33;
 }
 
-.page-wrapper .posts-slider .posts .post .inner-post .post-info {
+.page-wrapper .posts-slider .posts-wrapper .post .inner-post .post-info {
   height: 100px;
   padding: 5px 10px;
 }
@@ -406,7 +420,6 @@ header nav ul .userinfo i.fa-chevron-down {
   font-size: 0.8em;
 }
 
-
 .auth-content {
   width: 30%;
   margin: 50px auto;
@@ -429,7 +442,6 @@ header nav ul .userinfo i.fa-chevron-down {
 .auth-content .auth-nav a {
   text-decoration: underline;
 }
-
 
 /* FOOTER */
 
@@ -552,76 +564,59 @@ header nav ul .userinfo i.fa-chevron-down {
     font-size: 30px;
     color: #ffffff;
   }
-
   .menu-toggle:before {
     content: '\f0c9';
     font-family: fontAwesome;
     line-height: 40px;
   }
-
   nav {
     width: 100%;
     background: #0E94A0;
   }
-
   nav ul {
     max-height: 0px;
     overflow: hidden;
   }
-
   .showing {
     max-height: 95em;
   }
-
   nav ul li {
     box-sizing: border-box;
     width: 100%;
   }
-
   header nav ul li ul {
     position: static;
     box-sizing: border-box;
-  }
-
-  header nav ul li .dropdown {
     display: block;
     width: 100%;
   }
-
   header nav ul li .dropdown li {
     clear: both;
     width: 100%;
   }
-
   header nav ul li .dropdown li a {
     background: #0E94A0;
     color: white;
     padding: 15px;
     padding-left: 50px;
   }
-
   header nav ul li .dropdown li a:hover {
     background: #0E94A0;
   }
-
 }
 
 @media only screen and (max-width: 974px) {
-
   /* CONTENT */
   .content {
     width: 100%;
   }
-
   /* FOOTER */
   .footer .footer-content .footer-section {
     padding: 20px;
   }
-
   .footer .footer-content .about .contact {
     margin-top: 18px;
   }
-
   .auth-content {
     width: 40%;
   }
@@ -631,37 +626,31 @@ header nav ul .userinfo i.fa-chevron-down {
   .content {
     margin: 40px auto 50px;
   }
-
   .content .page-content {
     width: 100%;
   }
-
   .content .sidebar {
     width: 100%;
     margin-top: 40px;
     padding: 10px;
     box-sizing: border-box;
   }
-
   /* FOOTER */
   .footer {
     height: auto;
     padding: 50px;
   }
-
   .footer .footer-content {
     height: auto;
     display: flex;
     flex-direction: column;
   }
-
   .footer .footer-section {
     height: auto;
     display: block;
     padding: 100px auto;
     border-bottom: 1px solid rgb(34, 33, 33);
   }
-
   .footer .footer-section .send-msg-btn {
     width: 100%;
     padding: 8px auto;
@@ -673,24 +662,19 @@ header nav ul .userinfo i.fa-chevron-down {
     padding: 20px;
     padding-bottom: 60px;
   }
-
   .footer .footer-section {
     padding: 0px;
   }
-
   .content .page-content .post {
     height: auto;
   }
-
   .content .page-content .post .post-content {
     width: 100%;
     padding: 5px 15px;
   }
-
   .content .page-content .post .post-image {
     width: 100%;
   }
-
   .content .page-content .post .read-more {
     position: static;
     display: block;
@@ -698,15 +682,12 @@ header nav ul .userinfo i.fa-chevron-down {
     box-sizing: border-box;
     margin: 10px auto;
   }
-
   .page-wrapper .posts-slider .next {
     right: 10px;
   }
-
   .page-wrapper .posts-slider .prev {
     left: 10px;
   }
-
   .auth-content {
     width: 80%;
   }
